--- a/.env
+++ b/.env
@@ -3,18 +3,38 @@
 
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
+#Wz8gJfrELX7Qmpf4   
 
-DATABASE_URL=
-NEXTAUTH_SECRET=
+#new pass
+#dDL38d6D3cECOVhw
 
-NEXT_PUBLIC_PUSHER_APP_KEY=
-PUSHER_APP_ID=
-PUSHER_SECRET=
+DATABASE_URL="mongodb+srv://jay2110:dDL38d6D3cECOVhw@cntf.pz7ygca.mongodb.net/zh?retryWrites=true&w=majority"
+NEXTAUTH_SECRET="NEXTAUTH_SECRET"
 
-NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME=
+NEXT_PUBLIC_PUSHER_APP_KEY=beb6f96ade127b3790f1
+PUSHER_APP_ID=1601333
+PUSHER_SECRET=a7e9babba56ed7b889a1
+PUSHER_APP_CLUSTER=ap2
+NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME=djgpbd0j2
 
-GITHUB_ID=
-GITHUB_SECRET=
+GITHUB_ID=b153b6d9f9892208a141
+GITHUB_SECRET=1a55431576647e5a0dc62cab51f030439fb06e38
 
-GOOGLE_CLIENT_ID=
-GOOGLE_CLIENT_SECRET=
+GOOGLE_CLIENT_ID=383993339226-ad2udsc9oe61bbs7psta0s2ur6ulo8jh.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
+
+
+#DATABASE_URL=
+#NEXTAUTH_SECRET=
+
+#NEXT_PUBLIC_PUSHER_APP_KEY=
+#PUSHER_APP_ID=
+#PUSHER_SECRET=
+
+#NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME=
+
+#GITHUB_ID=
+#GITHUB_SECRET=
+
+#GOOGLE_CLIENT_ID=
+#GOOGLE_CLIENT_SECRET=
