--- a/package.json
+++ b/package.json
@@ -23,11 +23,14 @@
     "date-fns": "^2.29.3",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
+    "loadash": "^1.0.0",
     "lodash": "^4.17.21",
+    "mongodb": "^5.5.0",
     "next": "13.3.1",
     "next-auth": "^4.22.1",
-    "next-cloudinary": "^4.4.0",
+    "next-cloudinary": "^4.10.0",
     "next-superjson-plugin": "^0.5.7",
+    "node-fetch": "^3.3.1",
     "postcss": "8.4.21",
     "pusher": "^5.1.2",
     "pusher-js": "^8.0.2",
@@ -48,6 +51,7 @@
     "@tailwindcss/forms": "^0.5.3",
     "@types/bcrypt": "^5.0.0",
     "@types/lodash": "^4.14.194",
+    "encoding": "^0.1.13",
     "prisma": "^4.13.0"
   }
 }
